fix z-index for Active Orders header, conflicted with icon for "process being done"

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -40,6 +40,7 @@ body {
  ******************************************************************************/
 .table-color thead tr {
     font-size:1.35rem;
+    z-index: 9999;
 
     background-color: #83A7CC;
 }
